[gd_scene load_steps=4 format=3 uid="uid://cgho2htmfai12"]

[ext_resource type="Script" uid="uid://duplpih3cfqnb" path="res://scenes/ecran_jeu.gd" id="1_y4186"]
[ext_resource type="PackedScene" uid="uid://sqn7ykmxr7qv" path="res://scenes/personnage.tscn" id="4_j24k1"]
[ext_resource type="Script" uid="uid://l4h0cw8mns5q" path="res://scenes/choix.gd" id="6_j24k1"]

[node name="EcranJeu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4186")

[node name="Personnage" parent="." instance=ExtResource("4_j24k1")]
unique_name_in_owner = true
position = Vector2(0, -2)

[node name="DialogueChoix" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 120)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="DialogueChoix"]
layout_mode = 2

[node name="Choix1" type="Button" parent="DialogueChoix"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"BoutonChoixSuite"
alignment = 0
script = ExtResource("6_j24k1")

[node name="Choix2" type="Button" parent="DialogueChoix"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"BoutonChoixSuite"
alignment = 0
script = ExtResource("6_j24k1")

[connection signal="fini" from="Personnage" to="." method="_on_personnage_fini"]
[connection signal="mouse_entered" from="DialogueChoix/Choix1" to="DialogueChoix/Choix1" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="DialogueChoix/Choix2" to="DialogueChoix/Choix2" method="_on_mouse_entered"]
